[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'pyv4l2'
version = '0.1'
dependencies = [
  'pykms @ git+https://github.com/tomba/pykms.git',
  'pixutils @ git+https://github.com/tomba/pixutils.git',
]
requires-python = '>=3.8'
authors = [
  { name = 'Tomi Valkeinen', email = 'tomi.valkeinen@ideasonboard.com' },
]
maintainers = [
  { name = 'Tomi Valkeinen', email = 'tomi.valkeinen@ideasonboard.com' },
]
description = 'Pure-Python V4L2 bindings'
readme = 'README.md'
license = { file = 'LICENSE.md' }
keywords = ['linux', 'v4l2']
classifiers = [
  'Programming Language :: Python',
  'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
  'Development Status :: 4 - Beta',
]

[project.urls]
Homepage = 'https://github.com/tomba/pyv4l2'
Repository = 'https://github.com/tomba/pyv4l2.git'
'Bug Tracker' = 'https://github.com/tomba/pyv4l2/issues'

[tool.setuptools]
packages = ['v4l2', 'v4l2.uapi']

[tool.ruff]
line-length = 100
extend-exclude = ['v4l2/uapi/']

[tool.ruff.lint]
#extend-select = ['E', 'W', 'F', 'FA', 'Q']
#ignore = ['E741', 'E501']  # TODO: fix E501
extend-select = ['E', 'W', 'F', 'FA', 'Q', 'UP', 'PLE']
ignore = ['E741', 'E501', 'Q001', 'UP032']  # TODO: fix E501

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401', 'F403']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.format]
quote-style = 'single'
